--- a/dapps/dex-orderbook/src/App.css
+++ b/dapps/dex-orderbook/src/App.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
 :root {
-  --clr-primary: #999999;  /* #0D121D;*/
-  --clr-secondary:#134d5c; /* #121A29;*/
+  --clr-primary: #0D121D;  /* #0D121D;*/
+  --clr-secondary:#121A29; /* #121A29;*/
   --clr-neutral: #767F92;
 
   --clr-white: #F1F2F9;
@@ -371,6 +371,11 @@ small {
   margin: 0 0.5em 0 0;
 }
 
+.logo2 {
+  width: 15px;
+  height: auto;
+  margin: 0 0.5em 0 0;
+}
 .identicon {
   margin: 0 0 0 0.60em;
 }
