--- a/dapps/thirdweb/wallet-ui/src/styles/Home.css
+++ b/dapps/thirdweb/wallet-ui/src/styles/Home.css
@@ -2,7 +2,7 @@
     padding: 0 2rem;
 }
 
-/* css for components TokenCardContainer, ERC20Tokenscard and ERC721Tokenscard*/
+/* css for components TokenCardContainer, fluxTokencard and oceanicTokenscard */
 .token-card-container{
     display: flex;
     flex-direction: row;
@@ -30,7 +30,7 @@
 .eth-account{
     margin-left: 50px;
     font-size: small;
-    color:forestgreen;
+    color:darkolivegreen;
 }
 .eth-account strong{
     font-weight: bold;
@@ -60,10 +60,75 @@
     width: 20px;
     height: 20px;
 }
+/*
 .third-row > *:not(:first-child){
     margin-left: 60px;
+}*/
+.tokenOps  {
+    color: white;
+    background-color:indianred;
+    margin-left: 40px;
+    border-radius: 5px;
 }
 
+/* css description for sendFluxToken */
+.send-token-second-row{
+    display: flex;
+    flex-direction: column;
+    font-family:Arial, Helvetica, sans-serif;
+    height: 40px;
+    padding-left: 20px;
+    justify-content: flex-start;
+    width:100%;
+    box-shadow: 0 0.4px grey;
+    box-sizing: border-box;
+}
+.send-token-third-row{
+    display: flex;
+    flex-direction: column;
+}
+.input-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.ft-symbol {
+  flex: 1; /* 10% */
+  text-align: center;
+}
+input[type="text"] {
+  flex: 9; /* 90% */
+}
+
+.button-container{
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 20px;
+    gap: 20px;
+    margin-right: 20px;
+}
+.buttonBack{
+    color: white;
+    background-color:indianred;
+    border-radius: 5px;
+    text-align: center !important;
+    font-weight: normal;
+    font-size: 14px;
+    width: 200px;
+    height: 25px;
+    cursor: pointer;
+}
+.web3Button {
+  color: white !important;
+  background-color: indianred !important;
+  border-radius: 5px !important;
+  text-align: center !important;
+  font-weight: normal !important;
+  font-size: 14px !important;
+  height: 25px !important;
+  cursor: pointer;
+}
 /* css for description component */
 .description-h1{
     color: blue;
